Make sure the menu lists are scrollable on mobile
The overflow-y:auto was set only on menu :hover state what didn't work
properly on touch screens.

--- a/assets/stylesheets/bookingsync/_theme.scss
+++ b/assets/stylesheets/bookingsync/_theme.scss
@@ -48,6 +48,19 @@ h1, h2, h3, h4, h5, h6,
   transition: width 0.2s cubic-bezier(.4,0,.2,1);
   border-radius: 0;
 
+  .body {
+    overflow: hidden;
+  }
+
+  @media (max-width: $screen-xs-max) {
+    .body,
+    .menu-dropdown ol,
+    .menu-dropright {
+      overflow-y: auto;
+    }
+  }
+
+
   &:hover {
     width: 230px;
 
@@ -188,10 +201,6 @@ h1, h2, h3, h4, h5, h6,
       width: 16px;
       height: 16px;
     }
-  }
-
-  .body {
-    overflow: hidden;
   }
 
   .body,
